# azure-mc

./: .gitignore  LICENSE  README.md  TODO.md  azure_mc.py  mc_params.yaml  mc_setup.yaml  parameters.yaml  pyproject.toml  requirements.txt  setup.yaml
azure_mc/: __init__.py  __main__.py  cli.py  commands.py  constants.py  io.py  models.py  parameters.py  runner.py
