[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-mc"
version = "0.1.0"
description = "AZURE2 Monte Carlo uncertainty propagation tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alex Oliva", email = "alexoliva@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "pyyaml",
    "emcee",
]

[project.scripts]
azure-mc = "azure_mc.cli:main"

[project.urls]
Homepage = "https://github.com/alexoliva/azure-mc"
Repository = "https://github.com/alexoliva/azure-mc"

[tool.setuptools]
packages = ["azure_mc"]
